# boss-zhipin-automation

./: .gitignore  .ports  PROJECT_INIT.md  README.md  SCRIPT_USAGE.md  USAGE_GUIDE.md  build-app.sh  install.bat  install.sh  manage.sh  start.bat  start.sh  stop.bat  stop.sh  使用说明.txt
backend/: .env.example  API_REFERENCE.md  boss_auth_30181809.json  boss_auth_51169755.json  database.db.backup.20251103_180815  database.db.backup.before_account_switch  pyproject.toml  test_already_logged_in.py
backend/app/: database.py  main.py
backend/docs/: AGE_SLIDER_FINAL_SUMMARY.md  AGE_SLIDER_IMPLEMENTATION_SUMMARY.md  AGE_SLIDER_LOCATOR_METHOD_TEST.md  AGE_SLIDER_MCP_FINAL_REPORT.md  AGE_SLIDER_PRECISE_ADJUSTMENT_SUMMARY.md  AGE_SLIDER_SOLUTION_FOUND.md  AUTO_GREETING_FIXED.md  AUTO_GREETING_GUIDE.md  AUTO_GREETING_SUMMARY.md  AUTO_GREETING_TECHNICAL.md  CANDIDATE_DATA_EXTRACTION_SUMMARY.md  CANDIDATE_LIST_STRUCTURE.md  DOM_FIELD_MAPPING.md  FILTER_IMPLEMENTATION_SUMMARY.md  FILTER_INTEGRATION_COMPLETE.md  FILTER_INTEGRATION_GUIDE.md  FRONTEND_QRCODE_FIX.md  GET_CANDIDATES_INFO_README.md  QRCODE_AUTO_REFRESH_FIX.md  QRCODE_FIX_SUMMARY.md  QR_CODE_FIX_COMPLETED.md  QR_CODE_ISSUE_ANALYSIS.md  QUICK_START_GREETING.md  TEST_JOB_SELECTOR.md  WEB_GREETING_INTEGRATION.md  age_vue_verification_report.txt
backend/scripts/: analyze_candidates.py  api_test_login.py  auto_greeting_reusable.py  get_candidates_info.py  get_candidates_info_final.py  get_candidates_info_precise.py
backend/tests/: test_age_slider.py  test_age_slider_advanced.py  test_age_slider_click_track.py  test_login.py  (+36 more)
(+96 files in other folders)
